@@ -2,6 +2,7 @@
 v2.0
 ----
 
+[jan] Change default Sieve port to 4190 (Request #9791).
 [jan] Fix reading default forward rule from preferences.
 [jan] Fix removing flags with Sieve driver (Vilius Sumskas <vilius@lnk.lt>,
       Bug #9785).
